<resources>
    <string name="app_name">Demo</string>
    <string name="hint_confirmed_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="hint_Password">Password</string>
    <string name="hint_Mobile">Mobile</string>
    <string name="hint_Username">Username</string>
    <string name="hint_REGISTER">Register</string>
    <string name="hint_Register">REGISTER</string>
    <string name="hint_already">Already have an account? SIGN IN</string>
    <string name="hint_Hello">Hello</string>
    <string name="hint_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_addtoCart">Add to Cart</string>
    <string name="menu_logout">Logout</string>
    <string name="preeti">Preeti</string>
    <string name="preetibisht">preetibisht</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_details">Details</string>
    <string name="openDrawer">Drawer open</string>
    <string name="closeDrawer">Drawer close</string>
    <string name="proceed">Proceed</string>
</resources>
