<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/about_icon"
            android:icon="@drawable/about_icon"
            android:title="@string/menu_aboutUs" />

        <item
            android:id="@+id/cart_icon"
            android:icon="@drawable/cart_icon"
            android:title="@string/menu_addtoCart" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/logout_icon"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout" />

</menu>
