<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginBottom="60dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/hint_Register"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/hint_Username" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:maxLength="10"
        android:inputType="number"
        android:hint="@string/hint_Mobile"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_Password"/>

        <EditText
            android:id="@+id/et_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_confirmed_password"/>

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:text="@string/btn_sign_up"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/hint_already"/>


</RelativeLayout>
