<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/about_icon">
    <!---->




    <fragment
        android:id="@+id/cart_icon"
        android:name="com.isolsgroup.demo.ui.tools.ToolsFragment"
        android:label="@string/menu_addtoCart"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.isolsgroup.demo.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/logout_icon"
        android:name="com.isolsgroup.demo.ui.send.SendFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>